RESOLVED FIXED 263981
[WGSL] TypeChecker also ASSERTs on constants
https://bugs.webkit.org/show_bug.cgi?id=263981
Summary [WGSL] TypeChecker also ASSERTs on constants
Tadeu Zagallo
Reported 2023-10-31 10:13:56 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-31 10:14:12 PDT
Tadeu Zagallo
Comment 2 2023-10-31 10:18:51 PDT
EWS
Comment 3 2023-10-31 11:51:13 PDT
Committed 270017@main (8ca433aff29f): <https://commits.webkit.org/270017@main> Reviewed commits have been landed. Closing PR #19781 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.